# quicknurse

./: .gitignore  QuickNurse_Plan_Desarrollo_Producto_v2.1.docx  README.md  deploy.sh  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  tauri.conf.json  vercel.json  vite.config.ts
api/: index.py
backend/: .env.example  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  logging_config.py  main.py  models.py  security.py
backend/data/: drugs.json  education.json
backend/guides/: ACV-isquemico.md  ACV_isquemico.md  IAM_SCA.md  Quemados.md  RCP_avanzado_adulto.md  RCP_pediatrico.md  Ventilacion_mecanica.md  anafilaxia.md  dolor-toracico.md  electrocardiograma.md  gases-arteriales.md  interpretacion-gasometria.md  intoxicaciones.md  manejo-dolor-agudo.md  neumonia-gripe-covid.md  politrauma-atls.md  quemaduras.md  sepsis-manejo-inicial.md  shock-septico.md  triaje-manchester.md  urgencias-hipertensivas.md
backend/tests/: test_api.py  test_clinical.py  test_education.py  test_farmacologia.py  test_guides.py  test_text_extractor.py
flutter/: README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json  web_llm.js
flutter/windows/: CMakeLists.txt
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/hooks/: index.ts  useAI.ts  useAuth.ts  useCalculators.ts  usePatients.ts  useSettings.ts
src/pages/: HomePage.tsx  (+1 more)
(+86 files in other folders)
